@@ -6,6 +6,10 @@
 
 # Using test data from Philipp Lehman <lehman@gmx.net>
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_bibtex=$BinDir/bibtex$ExeExt
+
 test -d tests || mkdir -p tests
 
 # Create bib data
@@ -64,7 +68,7 @@ for t in 1 2 3; do
     TEXMFCNF=$srcdir/../kpathsea \
     BSTINPUTS=$srcdir/tests \
     BIBINPUTS=./tests \
-    ./bibtex tests/memtest$t || exit 1
+    $_bibtex tests/memtest$t || exit $t
 
 done
 
